docs(readme): restructure for evaluators — badges, TOC, audience, status
Lead with value prop and audience fit, surface requirements + observability,
group features by axis, and add a project-status callout so readers know
this is alpha. Also clarifies the two Postgres paths under the architecture
diagram and fills in the PG_USER/PG_PASSWORD config rows.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>