@@ -1,30 +1,87 @@
 # Quack on Demand
 
-**A production-grade FlightSQL gateway in front of [DuckDB Quack](https://duckdb.org/docs/current/core_extensions/quack) + [DuckLake](https://duckdb.org/docs/extensions/ducklake.html).**
+[![Status](https://img.shields.io/badge/status-alpha-orange.svg)](RESILIENCE.md)
+[![Build](https://github.com/starlake-ai/quack-on-demand/actions/workflows/snapshot.yml/badge.svg)](https://github.com/starlake-ai/quack-on-demand/actions/workflows/snapshot.yml)
+[![Release](https://img.shields.io/github/v/release/starlake-ai/quack-on-demand?display_name=tag&sort=semver)](https://github.com/starlake-ai/quack-on-demand/releases)
+[![Maven Central](https://img.shields.io/maven-central/v/ai.starlake/quack-on-demand_3.svg?label=maven%20central)](https://central.sonatype.com/artifact/ai.starlake/quack-on-demand_3)
+[![Docker Pulls](https://img.shields.io/docker/pulls/starlakeai/quack-on-demand.svg)](https://hub.docker.com/r/starlakeai/quack-on-demand)
+[![License](https://img.shields.io/badge/license-Apache%202.0-blue.svg)](LICENSE)
+[![Scala](https://img.shields.io/badge/scala-3.7-red.svg)](https://www.scala-lang.org/)
+[![JDK](https://img.shields.io/badge/jdk-17%2B-blue.svg)](https://adoptium.net/)
 
-DuckDB just shipped [Quack](https://duckdb.org/docs/current/core_extensions/quack), a new client-server protocol that lets DuckDB instances talk to each other over HTTP/2. This is a big deal: DuckDB is no longer just an embedded library, it can now be deployed as a shared server.
+**Multi-tenant Arrow Flight SQL gateway for DuckDB — shared DuckLake catalog, per-tenant pools, table-level ACLs, pluggable identity. Single uber-jar.**
 
-But Quack is intentionally minimal. It ships with a single static token for auth, no multi-tenancy, no authorization model, and the client side is DuckDB-specific. The docs themselves recommend putting infrastructure in front of it before any serious deployment.
+Any JDBC / ODBC / ADBC client connects to one Flight SQL edge; the gateway authenticates the user (DB / JWT / OIDC), checks table-level ACLs against the parsed SQL, classifies the statement, and routes it to a compatible node in the tenant's pool. Control-plane state lives next to DuckLake's metadata in the same Postgres database.
 
-Quack on Demand is that infrastructure: an **Arrow Flight SQL** edge (any JDBC/ODBC/ADBC client works, not just DuckDB), **multi-tenant pools** with role-aware routing, **pluggable identity** (DB / JWT / OIDC), **table-level ACLs** enforced per statement, and a **live admin UI**. All in a single uber-jar that shares Postgres with DuckLake.
+### Why this exists
+
+DuckDB's [Quack](https://duckdb.org/docs/current/core_extensions/quack) protocol lets DuckDB instances talk to each other over HTTP/2 — DuckDB is no longer just an embedded library. But Quack is intentionally minimal: a single static token for auth, no multi-tenancy, no authorization model, DuckDB-only on the client side. The docs themselves recommend putting infrastructure in front of it before any serious deployment. Quack on Demand is that infrastructure.
+
+### Project status
+
+**Alpha (`0.1.x`).** Designed to be **safely restartable**, not highly available — single-instance, no active-active manager yet. [`RESILIENCE.md`](RESILIENCE.md) is the honest failure-and-recovery matrix; [`docs/ROADMAP.md`](docs/ROADMAP.md) tracks what's planned next. APIs and config keys may change between `0.x` releases.
 
 ![Admin console - live per-node metrics, statement history, ACL editor](assets/metrics.jpg)
 
 ---
 
+## Contents
+
+- [Who is this for?](#who-is-this-for)
+- [Features](#features)
+- [Architecture](#architecture)
+- [Requirements](#requirements)
+- [Quick start](#quick-start)
+- [Configuration](#configuration)
+- [REST API](#rest-api)
+- [Admin UI](#admin-ui)
+- [ACL model](#acl-model)
+- [Tech stack](#tech-stack)
+- [Development](#development)
+- [Operational notes](#operational-notes)
+- [License](#license)
+- [Community](#community)
+- [Contributing](#contributing)
+
+---
+
+## Who is this for?
+
+**Use Quack on Demand if you want to:**
+
+- Expose a DuckLake / DuckDB warehouse to multiple teams or apps over a standard wire protocol (Arrow Flight SQL — works with JDBC, ODBC, ADBC, PyArrow, DBeaver, Spark, and other Flight-aware clients)
+- Authenticate users against your existing identity provider (Keycloak / Azure AD / Google / Cognito / JWT / database) and enforce table-level ACLs at query time
+- Run several tenants on shared infrastructure without giving each one a private DuckDB process to manage
+
+**Look elsewhere if you:**
+
+- Just need a single embedded DuckDB inside one application — use DuckDB directly
+- Need a distributed query engine over data lakes with cross-node shuffles and joins on TB-scale tables — look at Trino / Dremio / StarRocks. Quack on Demand routes each statement to a single Quack node; it doesn't fan out across them
+
+---
+
 ## Features
 
+### Security & identity
+
 - **Arrow Flight SQL edge** with auto-generated self-signed TLS (drop in a CA-signed cert for prod)
-- **Multi-tenant pools** of Quack nodes. Each node is `READONLY`, `WRITEONLY`, or `DUAL`; the router classifies each statement and picks a compatible node
 - **Pluggable authentication** through the vendored `AuthenticationService` chain:
   - Postgres / any JDBC backend (BCrypt-hashed passwords, free-form SQL template)
   - External JWT (HS256 / RS256 / public-key PEM)
   - OIDC providers: Keycloak (with ROPC), Google, Azure AD, AWS Cognito
 - **Postgres-relational ACL** stored in `slkstate_acl_grant`, managed via REST, enforced per statement (SQL parser extracts table refs, the validator looks up grants for the user's principal)
 - **Admin REST API** with an `X-API-Key` static key OR a session token minted via `/api/auth/login`
-- **React admin console** at `/ui/` - tenant CRUD, pool CRUD, per-tenant ACL editor, live node dashboard (in-flight, total served, EWMA latency), admin-role gated
+
+### Data plane
+
+- **Multi-tenant pools** of Quack nodes. Each node is `READONLY`, `WRITEONLY`, or `DUAL`; the router classifies each statement and picks a compatible node
 - **Single uber-jar** deployment; control-plane state lives next to DuckLake's metadata in the same Postgres database
-- **Self-healing on restart** - dead Quack child processes are detected (PID + port probe) and respawned automatically before the edge accepts traffic
+
+### Operability
+
+- **React admin console** at `/ui/` - tenant CRUD, pool CRUD, per-tenant ACL editor, live node dashboard (in-flight, total served, EWMA latency), admin-role gated
+- **Observability built in** - Prometheus scrape endpoint at `/metrics`, or push to AWS CloudWatch / Azure Monitor / GCP Cloud Monitoring (one sink at a time, picked via `metrics.sink`). Ships with a Grafana 10.x dashboard at [observability/grafana-dashboard.json](observability/grafana-dashboard.json)
+- **Self-healing on restart** - when the manager comes back up, every Quack node from `slkstate_pool_state` is reconciled: each child's recorded PID is checked, its port is probed, and any node that no longer answers is respawned before the Flight SQL edge starts accepting traffic. Full failure-and-recovery matrix in [`RESILIENCE.md`](RESILIENCE.md)
 - **Every config key is overridable** via a `QOD_*` env var
 
 ---
@@ -79,6 +136,26 @@ Quack on Demand is that infrastructure: an **Arrow Flight SQL** edge (any JDBC/O
                                                           (S3, GCS, FS, …)
 ```
 
+**Two paths into Postgres** (not pictured to keep the diagram readable):
+
+- The **manager** owns the control plane — it writes `slkstate_pool_state` / `slkstate_user` on tenant + pool CRUD, and reads `slkstate_acl_grant` from the ACL validator on every authenticated statement.
+- Each **Quack node** owns the data plane — it reads and writes DuckLake's `ducklake_*` catalog tables directly when resolving and mutating tables.
+
+Both sets of tables live in the same database so control-plane and catalog stay transactionally coherent.
+
+---
+
+## Requirements
+
+| | Version | Notes |
+|---|---|---|
+| **JDK** | 17+ | Built and shipped on Temurin 17 (Dockerfile). Arrow's `arrow-memory-unsafe` allocator needs `--add-opens=java.base/java.nio` and `java.base/sun.nio.ch` on 17+ — the assembly jar sets these via an `Add-Opens` manifest attribute so `java -jar` just works |
+| **Postgres** | 13+ | Tested with the `postgres:16-alpine` image bundled in `docker-compose.yml`. Both DuckLake's `ducklake_*` catalog tables and the `slkstate_*` control-plane tables live in the same database |
+| **DuckDB CLI** | matched to the bundled libduckdb | Each Quack node is a child `duckdb` process. The Docker image ships its own; for **native** runs you need `duckdb` on `$PATH` (see [`RUNNING.md`](RUNNING.md) for the pinned version) |
+| **Docker** | Engine 24+, Compose v2 | Compose path only |
+| **Scala / sbt** | 3.7, sbt 1.x | Source builds only — not needed if you run the published jar or Docker image |
+| **OS** | Linux, macOS | Manager and nodes; the assembly jar bundles `libduckdb_java.so` for `linux_amd64`, `linux_arm64`, and `osx_universal` |
+
 ---
 
 ## Quick start
@@ -90,7 +167,9 @@ cp .env.example .env                            # tweak ports / auth / admin pas
 LOAD_TPCH=1 ./scripts/run-docker-compose.sh     # pulls starlakeai/quack-on-demand:latest + seeds TPC-H SF=1
 ```
 
-That brings up Postgres + the manager and seeds the DuckLake catalog with TPC-H at scale factor 1 (~6M lineitem rows) into schema `tpch.tpch1`. The admin UI is on `http://localhost:20900/ui/` (default login `admin` / `admin` - change it in `.env`); the FlightSQL edge on `localhost:31338`.
+That brings up Postgres + the manager and seeds the DuckLake catalog with TPC-H at scale factor 1 (~6M lineitem rows) into schema `tpch.tpch1`. The admin UI is on `http://localhost:20900/ui/` — log in as `admin` (or the equivalent `admin@localhost.local`; `QOD_ADMIN_USERNAME` is a comma-separated list) with password `admin`. Change both before exposing anything beyond `localhost`. The FlightSQL edge is on `localhost:31338`.
+
+**Prefer a bare-JVM run?** `./scripts/run-jar.sh` downloads the latest released uber-jar, probes Postgres, and `exec`s `java -jar` with the Arrow allocator pinned — `BUILD=1 ./scripts/run-jar.sh` builds from this checkout first. See [`RUNNING.md`](RUNNING.md) for the full native path (external Postgres, env vars, TLS).
 
 Smoke-test the FlightSQL edge with the Python load tester:
 
@@ -103,6 +182,17 @@ python3 ./scripts/loadtest/loadtest.py -w 2 -i 5
 # Plaintext server (TLS=false in .env, or scripts/run-docker.sh default)
 ./scripts/loadtest/loadtest.py --url grpc://localhost:31338 -w 2 -i 5
 ```
+
+Expected tail — a healthy first run looks like this (numbers depend on `-w`/`-i` and hardware):
+
+```
+Queries OK:       10
+Queries failed:   0
+Throughput:       ~25 qps
+Latency  p50:     ~40 ms
+```
+
+`Queries failed: 0` is the success signal. If queries fail with `UNAUTHENTICATED`, your `.env` credentials don't match what the manager seeded; if they fail with TLS errors, see the `--insecure` / `grpc://` note in [`QUICKSTART.md`](QUICKSTART.md#2-run-your-first-query--30-seconds).
 
 Everything else - native run, Docker against an external Postgres, TPC-H seeding, corporate proxy setup, JDBC client configuration, REST API recipes, the full loadtest parameter table - lives in **[`RUNNING.md`](RUNNING.md)**.
 
@@ -119,6 +209,8 @@ Every scalar in `src/main/resources/application.conf` accepts a matching `QOD_*`
 | FlightSQL TLS on/off | `PROXY_TLS_ENABLED` | `true` |
 | State backend | `QOD_STATE_STORAGE` | `postgres` |
 | Metastore host | `QOD_PG_HOST` | `localhost` |
+| Metastore user | `QOD_PG_USER` | `postgres` |
+| Metastore password | `QOD_PG_PASSWORD` | `azizam` (change this!) |
 | Metastore database | `QOD_PG_DBNAME` | `tpch` |
 | Static admin key | `QOD_API_KEY` | unset |
 | Admin usernames | `QOD_ADMIN_USERNAME` | `admin@localhost.local,admin` |
@@ -156,6 +248,7 @@ All endpoints under `/api/*` require a valid `X-API-Key` (either the static `QOD
 | `POST` | `/api/acl/grant/delete/:id` | revoke |
 | `GET`  | `/api/config/client`        | discovery: edge host/port/TLS (open) |
 | `GET`  | `/health`                   | liveness + pool/node counts (open) |
+| `GET`  | `/metrics`                  | Prometheus text-format scrape (open). Disabled when `metrics.sink` pushes to CloudWatch / Azure Monitor / GCP Cloud Monitoring |
 
 ---
 
@@ -168,6 +261,8 @@ All endpoints under `/api/*` require a valid `X-API-Key` (either the static `QOD
 | **/tenant/:tenant** | Tenant detail · pools · storage · **ACL grants editor** |
 | **/pool/:tenant/:pool** | Pool nodes, JDBC/ODBC/ADBC connection strings, scale/stop |
 | **/nodes** | Live cluster dashboard: per-node `inFlight`, `totalServed`, EWMA latency, role + health badges, per-tenant filter, auto-refresh every 2s |
+
+![Live node dashboard - per-node inFlight, totalServed, EWMA latency](assets/nodes-dashboard.jpg)
 
 ---
 
@@ -187,6 +282,8 @@ When `acl.enabled=true` and `stateStorage=postgres`, `PostgresAclValidator` pars
 
 **Principal expansion.** At validation time the authenticated session's `username`, `groups`, and `role` are expanded into `user:<username>`, `group:<g>` (one per group), and `role:<r>` principals; a grant matches if *any* of them does. So an OIDC user `alice` with groups `[engineers, analysts]` and role `viewer` triggers lookups for four principals at once - write your grants against whichever level of identity is stable.
 
+![ACL grants editor on the tenant detail page](assets/acl-editor.jpg)
+
 Add a grant from the UI's tenant detail page, or via curl:
 
 ```bash
@@ -205,7 +302,6 @@ curl -H "X-API-Key: $TOKEN" -X POST http://localhost:20900/api/acl/grant/create 
 - **Cats Effect** + **fs2** for the runtime
 - **Tapir** + **HTTP4s Ember** for the REST API
 - **Apache Arrow Flight SQL 14** + `arrow-memory-unsafe` (pinned via `-Darrow.allocation.manager.type=Unsafe`)
-- **DuckDB JDBC** embedded in the manager to bridge to Quack's binary wire (via `quack_query()` table function)
 - **DuckLake** for shared catalog metadata + S3/FS data storage
 - **PostgreSQL** for catalog metadata + control-plane state (`slkstate_*` tables)
 - **React 18** + **Vite** + **react-router-dom** for the SPA (no UI framework - single dark-theme CSS file)
